# somelife-batteryui

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: app.rs  battery.rs  history.rs  main.rs
src/ui/: charts.rs  details.rs  live.rs  mod.rs
